DDBNEXT-500: header in mobile for IE now working DDBNEXT-566: solved some bugs for the print view on IE8, but still working progress

--- a/web-app/css/ddb.css
+++ b/web-app/css/ddb.css
@@ -469,7 +469,6 @@ header .header-spacer,.header .header-spacer {
   border-right: 2px solid #e9e5e2;
 }
 
-
 #form-search-header .link-adv-search {
   font-size: 0.938em;
   display: inline-block;
@@ -702,6 +701,20 @@ header .language-widget form,.header .language-widget form {
   }
   #form-search-header .link-adv-search, .header .link-adv-search {
     margin-left: 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  header.ie-mobile .span7 {
+    width: 75%;
+    float: left;
+  }
+  header.ie-mobile .toolbar {
+    width: 20%;
+    float: left;
+  }
+  header.ie-mobile .navigation {
+    margin-bottom: 30px;
   }
 }
 
